force-app/main/default/objects/Project_Extension__c/fields/PO_Received_F__c.field-meta.xml
<CustomField>
    <fullName>PO_Received_F__c</fullName>
    <label>PO Received (F)</label>
    <type>Date</type>
</CustomField>