force-app/main/default/objects/Project_Extension__c/fields/PO_Requested_A__c.field-meta.xml
<CustomField>
    <fullName>PO_Requested_A__c</fullName>
    <label>PO Requested (A)</label>
    <type>Date</type>
</CustomField>