force-app/main/default/objects/Project_Extension__c/fields/PO_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>PO_Requested_F__c</fullName>
    <label>PO Requested (F)</label>
    <type>Date</type>
</CustomField>