force-app/main/default/objects/Project_Extension__c/fields/Power_Conduit_Installed_A__c.field-meta.xml
<CustomField>
    <fullName>Power_Conduit_Installed_A__c</fullName>
    <label>Power Ready (A)</label>
    <type>Date</type>
</CustomField>