force-app/main/default/objects/Project_Extension__c/fields/Power_Conduit_Installed_F__c.field-meta.xml
<CustomField>
    <fullName>Power_Conduit_Installed_F__c</fullName>
    <label>Power Ready (F)</label>
    <type>Date</type>
</CustomField>