force-app/main/default/objects/Project_Extension__c/fields/Power_Design_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Power_Design_Received_A__c</fullName>
    <label>Power Design Received (A)</label>
    <type>Date</type>
</CustomField>