force-app/main/default/objects/Project_Extension__c/fields/Power_Design_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Power_Design_Received_F__c</fullName>
    <label>Power Design Received (F)</label>
    <type>Date</type>
</CustomField>