force-app/main/default/objects/Project_Extension__c/fields/Power_Walk_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Power_Walk_Complete_A__c</fullName>
    <label>Power Walk Complete (A)</label>
    <type>Date</type>
</CustomField>