force-app/main/default/objects/Project_Extension__c/fields/Preliminary_Exhibit_A__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Exhibit_A__c</fullName>
    <label>Preliminary Exhibit S (A)</label>
    <type>Date</type>
</CustomField>