force-app/main/default/objects/Project_Extension__c/fields/Preliminary_Exhibit_F__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Exhibit_F__c</fullName>
    <label>Preliminary Exhibit S (F)</label>
    <type>Date</type>
</CustomField>