force-app/main/default/objects/Project_Extension__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Project Extension</relationshipLabel>
    <relationshipName>Project_Extension</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>