force-app/main/default/objects/Project_Extension__c/fields/Project_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Project_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Acceptance</label>
    <referenceTo>Project_Acceptance__c</referenceTo>
    <relationshipLabel>Project Extension</relationshipLabel>
    <relationshipName>PE_Project_Acceptance</relationshipName>
    <type>Lookup</type>
</CustomField>