force-app/main/default/objects/Project_Extension__c/fields/Proof_of_Pwr_Loaded_to_Filetra_F__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Pwr_Loaded_to_Filetra_F__c</fullName>
    <label>Proof of Pwr Loaded to Filetra (F)</label>
    <type>Date</type>
</CustomField>