force-app/main/default/objects/Project_Extension__c/fields/Push_to_CTS_Complete_F__c.field-meta.xml
<CustomField>
    <fullName>Push_to_CTS_Complete_F__c</fullName>
    <label>Push to CTS Complete (F)</label>
    <type>Date</type>
</CustomField>