force-app/main/default/objects/Project_Extension__c/fields/RAN_Harmoni_NTP_to_IGC_F__c.field-meta.xml
<CustomField>
    <fullName>RAN_Harmoni_NTP_to_IGC_F__c</fullName>
    <label>RAN Harmoni NTP to IGC (F)</label>
    <type>Date</type>
</CustomField>