force-app/main/default/objects/Project_Extension__c/fields/RBS_Data_Entered_F__c.field-meta.xml
<CustomField>
    <fullName>RBS_Data_Entered_F__c</fullName>
    <label>RBS Data Entered (F)</label>
    <type>Date</type>
</CustomField>