force-app/main/default/objects/Project_Extension__c/fields/Received_BOM_A__c.field-meta.xml
<CustomField>
    <fullName>Received_BOM_A__c</fullName>
    <label>BOM Created (A)</label>
    <type>Date</type>
</CustomField>