force-app/main/default/objects/Project_Extension__c/fields/Received_BOM_F__c.field-meta.xml
<CustomField>
    <fullName>Received_BOM_F__c</fullName>
    <label>BOM Created (F)</label>
    <type>Date</type>
</CustomField>