force-app/main/default/objects/Project_Extension__c/fields/Recorded_MOL_SLA_F__c.field-meta.xml
<CustomField>
    <fullName>Recorded_MOL_SLA_F__c</fullName>
    <label>Recorded MOL - SLA Received (F)</label>
    <type>Date</type>
</CustomField>