force-app/main/default/objects/Project_Extension__c/fields/Reg_PO_Received_in_NetSuite_F__c.field-meta.xml
<CustomField>
    <fullName>Reg_PO_Received_in_NetSuite_F__c</fullName>
    <label>Reg. PO Received in NetSuite (F)</label>
    <type>Date</type>
</CustomField>