force-app/main/default/objects/Project_Extension__c/fields/Rent_Reconciliation_Due_F__c.field-meta.xml
<CustomField>
    <fullName>Rent_Reconciliation_Due_F__c</fullName>
    <label>Rent Reconciliation Due (F)</label>
    <type>Date</type>
</CustomField>