force-app/main/default/objects/Project_Extension__c/fields/Request_MW_Scoping_From_Installer_A__c.field-meta.xml
<CustomField>
    <fullName>Request_MW_Scoping_From_Installer_A__c</fullName>
    <label>Request MW Scoping From Installer (A)</label>
    <type>Date</type>
</CustomField>