force-app/main/default/objects/Project_Extension__c/fields/RET_Form_A__c.field-meta.xml
<CustomField>
    <fullName>RET_Form_A__c</fullName>
    <label>RET Form (A)</label>
    <type>Date</type>
</CustomField>