force-app/main/default/objects/Project_Extension__c/fields/RET_Form_F__c.field-meta.xml
<CustomField>
    <fullName>RET_Form_F__c</fullName>
    <label>RET Form (F)</label>
    <type>Date</type>
</CustomField>