force-app/main/default/objects/Project_Extension__c/fields/RFDS_As_Built_In_Progress_A__c.field-meta.xml
<CustomField>
    <fullName>RFDS_As_Built_In_Progress_A__c</fullName>
    <label>RFDS As Built In Progress (A)</label>
    <type>Date</type>
</CustomField>