force-app/main/default/objects/Project_Extension__c/fields/RFDS_As_Built_In_Progress_F__c.field-meta.xml
<CustomField>
    <fullName>RFDS_As_Built_In_Progress_F__c</fullName>
    <label>RFDS As Built In Progress (F)</label>
    <type>Date</type>
</CustomField>