force-app/main/default/objects/Project_Extension__c/fields/Room_Ready_Equipment_SERF_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>Room_Ready_Equipment_SERF_Submitted_A__c</fullName>
    <label>Room Ready Equipment SERF Submitted (A)</label>
    <type>Date</type>
</CustomField>