force-app/main/default/objects/Project_Extension__c/fields/Room_Ready_Install_Complete_Powered_A__c.field-meta.xml
<CustomField>
    <fullName>Room_Ready_Install_Complete_Powered_A__c</fullName>
    <label>Room Ready Install Complete (Powered (A)</label>
    <type>Date</type>
</CustomField>