force-app/main/default/objects/Project_Extension__c/fields/Room_Ready_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Room_Ready_Lock_Date__c</fullName>
    <label>Room Ready Lock Date</label>
    <type>Date</type>
</CustomField>