force-app/main/default/objects/Project_Extension__c/fields/Scoping_Request_to_Installer_A__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Request_to_Installer_A__c</fullName>
    <label>RAN GC Scoping (A)</label>
    <type>Date</type>
</CustomField>