force-app/main/default/objects/Project_Extension__c/fields/Scoping_Request_to_Installer_F__c.field-meta.xml
<CustomField>
    <fullName>Scoping_Request_to_Installer_F__c</fullName>
    <label>RAN GC Scoping (F)</label>
    <type>Date</type>
</CustomField>