force-app/main/default/objects/Project_Extension__c/fields/SDF_Signed_A__c.field-meta.xml
<CustomField>
    <fullName>SDF_Signed_A__c</fullName>
    <label>SDF Signed (A)</label>
    <type>Date</type>
</CustomField>