force-app/main/default/objects/Project_Extension__c/fields/SDF_Signed_F__c.field-meta.xml
<CustomField>
    <fullName>SDF_Signed_F__c</fullName>
    <label>SDF Signed (F)</label>
    <type>Date</type>
</CustomField>