force-app/main/default/objects/Project_Extension__c/fields/SDF_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>SDF_Submitted_A__c</fullName>
    <label>SDF Submitted (A)</label>
    <type>Date</type>
</CustomField>