force-app/main/default/objects/Project_Extension__c/fields/SDF_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>SDF_Submitted_F__c</fullName>
    <label>SDF Submitted (F)</label>
    <type>Date</type>
</CustomField>