force-app/main/default/objects/Project_Extension__c/fields/Site_Acquisition_Complete_RE020_F__c.field-meta.xml
<CustomField>
    <fullName>Site_Acquisition_Complete_RE020_F__c</fullName>
    <label>Carrier Site Acquisition Complete (F)</label>
    <type>Date</type>
</CustomField>