force-app/main/default/objects/Project_Extension__c/fields/Site_Close_Out_Form_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>Site_Close_Out_Form_Submitted_A__c</fullName>
    <label>Site Close Out Form Submitted (A)</label>
    <type>Date</type>
</CustomField>