force-app/main/default/objects/Project_Extension__c/fields/Site_Close_Out_Form_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>Site_Close_Out_Form_Submitted_F__c</fullName>
    <label>Site Close Out Form Submitted (F)</label>
    <type>Date</type>
</CustomField>