force-app/main/default/objects/Project_Extension__c/fields/Site_Turnover_Package_and_True_Up_Co_A__c.field-meta.xml
<CustomField>
    <fullName>Site_Turnover_Package_and_True_Up_Co_A__c</fullName>
    <label>Site T/O Pkg and True Up Completed (A)</label>
    <type>Date</type>
</CustomField>