force-app/main/default/objects/Project_Extension__c/fields/SLA_AMD_Required_A__c.field-meta.xml
<CustomField>
    <fullName>SLA_AMD_Required_A__c</fullName>
    <label>SLA AMD Required (A)</label>
    <type>Date</type>
</CustomField>