force-app/main/default/objects/Project_Extension__c/fields/SLA_AMD_Required_F__c.field-meta.xml
<CustomField>
    <fullName>SLA_AMD_Required_F__c</fullName>
    <label>SLA AMD Required (F)</label>
    <type>Date</type>
</CustomField>