force-app/main/default/objects/Project_Extension__c/fields/SNDA_Required__c.field-meta.xml
<CustomField>
    <fullName>SNDA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SNDA Required?</label>
    <type>Checkbox</type>
</CustomField>