force-app/main/default/objects/Project_Extension__c/fields/Soil_Mgmt_Material_Handling_Plan_Rec_A__c.field-meta.xml
<CustomField>
    <fullName>Soil_Mgmt_Material_Handling_Plan_Rec_A__c</fullName>
    <label>Soil Mgmt/Material Handling Plan Rec (A)</label>
    <type>Date</type>
</CustomField>