force-app/main/default/objects/Project_Extension__c/fields/Survey_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>Survey_Approved_A__c</fullName>
    <label>Survey Approved (A)</label>
    <type>Date</type>
</CustomField>