force-app/main/default/objects/Project_Extension__c/fields/Survey_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Survey_Approved_F__c</fullName>
    <label>Survey Approved (F)</label>
    <type>Date</type>
</CustomField>