force-app/main/default/objects/Project_Extension__c/fields/Tape_Drop_F__c.field-meta.xml
<CustomField>
    <fullName>Tape_Drop_F__c</fullName>
    <label>RAN Tape Drop Submitted (F)</label>
    <type>Date</type>
</CustomField>