force-app/main/default/objects/Project_Extension__c/fields/Telco_Design_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Telco_Design_Received_A__c</fullName>
    <label>Telco Design Received (A)</label>
    <type>Date</type>
</CustomField>