force-app/main/default/objects/Project_Extension__c/fields/Telco_Design_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Telco_Design_Received_F__c</fullName>
    <label>Telco Design Received (F)</label>
    <type>Date</type>
</CustomField>