force-app/main/default/objects/Project_Extension__c/fields/Telco_Walk_Scheduled_A__c.field-meta.xml
<CustomField>
    <fullName>Telco_Walk_Scheduled_A__c</fullName>
    <label>Telco Walk Scheduled (A)</label>
    <type>Date</type>
</CustomField>