force-app/main/default/objects/Project_Extension__c/fields/Telco_Walk_Scheduled_F__c.field-meta.xml
<CustomField>
    <fullName>Telco_Walk_Scheduled_F__c</fullName>
    <label>Telco Walk Scheduled (F)</label>
    <type>Date</type>
</CustomField>