force-app/main/default/objects/Project_Extension__c/fields/Tenant_COI_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Tenant_COI_Received_A__c</fullName>
    <label>Tenant COI Received (A)</label>
    <type>Date</type>
</CustomField>