force-app/main/default/objects/Project_Extension__c/fields/Tenant_COI_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Tenant_COI_Received_F__c</fullName>
    <label>Tenant COI Received (F)</label>
    <type>Date</type>
</CustomField>