force-app/main/default/objects/Project_Extension__c/fields/Title_Review_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Title_Review_Received_A__c</fullName>
    <label>Title Review Received (A)</label>
    <type>Date</type>
</CustomField>