force-app/main/default/objects/Project_Extension__c/fields/Title_Review_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Title_Review_Received_F__c</fullName>
    <label>Title Review Received (F)</label>
    <type>Date</type>
</CustomField>