force-app/main/default/objects/Project_Extension__c/fields/Title_Status__c.field-meta.xml
<CustomField>
    <fullName>Title_Status__c</fullName>
    <label>Title Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Built Survey In Process</fullName>
            </value>
            <value>
                <fullName>Need MOL/MOA</fullName>
                <label>Title Policy Waiting on MOL/MOA</label>
            </value>
            <value>
                <fullName>Policy in Process</fullName>
                <label>Title Policy in Process</label>
            </value>
            <value>
                <fullName>Policy Received</fullName>
                <label>Title Policy Received</label>
            </value>
            <value>
                <fullName>Recently built</fullName>
            </value>
            <value>
                <fullName>Railroad site; title company will not insure</fullName>
                <label>Uninsurable (Property Type)</label>
            </value>
            <value>
                <fullName>Landlord not willing</fullName>
                <label>Not Able to Obtain Title (Landowner)</label>
            </value>
            <value>
                <fullName>GLBO In Process</fullName>
            </value>
            <value>
                <fullName>TestA</fullName>
            </value>
            <value>
                <fullName>TestB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>