force-app/main/default/objects/Project_Extension__c/fields/Title_Update_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Title_Update_Ordered_F__c</fullName>
    <label>Title Update Ordered (F)</label>
    <type>Date</type>
</CustomField>