force-app/main/default/objects/Project_Extension__c/fields/Title_Update_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Title_Update_Received_A__c</fullName>
    <label>Title Update Received (A)</label>
    <type>Date</type>
</CustomField>