force-app/main/default/objects/Project_Extension__c/fields/Tower_Bid_Requested_A__c.field-meta.xml
<CustomField>
    <fullName>Tower_Bid_Requested_A__c</fullName>
    <label>Tower Bid Requested (A)</label>
    <type>Date</type>
</CustomField>