force-app/main/default/objects/Project_Extension__c/fields/Tower_Bid_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>Tower_Bid_Requested_F__c</fullName>
    <label>Tower Bid Requested (F)</label>
    <type>Date</type>
</CustomField>