force-app/main/default/objects/Project_Extension__c/fields/Transport_PLA_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_PLA_Date__c</fullName>
    <formula>Room_Ready_Lock_Date__c+90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport PLA Date</label>
    <type>Date</type>
</CustomField>