force-app/main/default/objects/Project_Extension__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>IF</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>MW-drain</fullName>
            </value>
            <value>
                <fullName>OOF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>