force-app/main/default/objects/Project_Extension__c/fields/Unit_Economics_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Economics_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Economics Id</label>
    <referenceTo>Unit_Economics__c</referenceTo>
    <relationshipLabel>Project Extension</relationshipLabel>
    <relationshipName>PE_UnitEconomics</relationshipName>
    <type>Lookup</type>
</CustomField>