force-app/main/default/objects/Project_Extension__c/fields/Uploaded_UE_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_UE_Milestones__c</fullName>
    <label>Uploaded UE Milestones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Acceptance UE</fullName>
            </value>
            <value>
                <fullName>SCIP UE</fullName>
            </value>
            <value>
                <fullName>Ground Lease UE</fullName>
            </value>
            <value>
                <fullName>Pre-Cx UE</fullName>
            </value>
            <value>
                <fullName>Final UE</fullName>
            </value>
            <value>
                <fullName>In-Cx UE</fullName>
            </value>
            <value>
                <fullName>Revised UE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>