force-app/main/default/objects/Project_Extension__c/fields/Verify_Provider_FAST_Cabinet_A__c.field-meta.xml
<CustomField>
    <fullName>Verify_Provider_FAST_Cabinet_A__c</fullName>
    <label>Verify Provider FAST Cabinet (A)</label>
    <type>Date</type>
</CustomField>