force-app/main/default/objects/Project_Extension__c/fields/Verify_Provider_FAST_Cabinet_F__c.field-meta.xml
<CustomField>
    <fullName>Verify_Provider_FAST_Cabinet_F__c</fullName>
    <label>Verify Provider FAST Cabinet (F)</label>
    <type>Date</type>
</CustomField>