force-app/main/default/objects/Project_Extension__c/fields/Video_Quality_Audit_A__c.field-meta.xml
<CustomField>
    <fullName>Video_Quality_Audit_A__c</fullName>
    <label>VQA Submitted (A)</label>
    <type>Date</type>
</CustomField>