force-app/main/default/objects/Project_Extension__c/fields/Video_Quality_Audit_F__c.field-meta.xml
<CustomField>
    <fullName>Video_Quality_Audit_F__c</fullName>
    <label>VQA Submitted (F)</label>
    <type>Date</type>
</CustomField>