force-app/main/default/objects/Project_Extension__c/fields/VQA_Accepted_A__c.field-meta.xml
<CustomField>
    <fullName>VQA_Accepted_A__c</fullName>
    <label>VQA Accepted (A)</label>
    <type>Date</type>
</CustomField>