force-app/main/default/objects/Project_Extension__c/fields/VQA_Accepted_F__c.field-meta.xml
<CustomField>
    <fullName>VQA_Accepted_F__c</fullName>
    <label>VQA Accepted (F)</label>
    <type>Date</type>
</CustomField>