force-app/main/default/objects/Project_Extension__c/fields/Zoning_Analysis_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Analysis_Received_A__c</fullName>
    <label>Zoning Analysis Received (A)</label>
    <type>Date</type>
</CustomField>