force-app/main/default/objects/Project_Extension__c/fields/Zoning_Analysis_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Analysis_Received_F__c</fullName>
    <label>Zoning Analysis Received (F)</label>
    <type>Date</type>
</CustomField>