force-app/main/default/objects/Project_Extension__c/fields/Zoning_Appeal_End_A__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Appeal_End_A__c</fullName>
    <label>Zoning Appeal End (A)</label>
    <type>Date</type>
</CustomField>