force-app/main/default/objects/Project_Extension__c/fields/Zoning_Appeal_End_F__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Appeal_End_F__c</fullName>
    <label>Zoning Appeal End (F)</label>
    <type>Date</type>
</CustomField>