force-app/main/default/objects/Project_Extension__c/fields/Zoning_Application_Accepted_A__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Application_Accepted_A__c</fullName>
    <label>Zoning Application Accepted (A)</label>
    <type>Date</type>
</CustomField>