force-app/main/default/objects/Project_Extension__c/fields/Zoning_Application_Accepted_F__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Application_Accepted_F__c</fullName>
    <label>Zoning Application Accepted (F)</label>
    <type>Date</type>
</CustomField>